[package]
name = "niko"
version = "0.1.1"
authors = ["Vengarioth | Andreas Fischer <opensource@deviru.de>"]
edition = "2018"
license = "MIT"
description = "the niko wasm game engine"
homepage = "https://github.com/niko-rs/niko"
repository = "https://github.com/niko-rs/niko"
documentation = "https://docs.rs/niko"
keywords = ["game", "engine", "framework", "gamedev"]
categories = ["game-engines"]
readme = "readme.md"

[dependencies]
