[package]
name = "niko"
version = "0.1.5"
authors = ["Vengarioth | Andreas Fischer <opensource@deviru.de>"]
edition = "2018"
license = "MIT"
description = "the niko wasm game engine"
homepage = "https://github.com/niko-rs/niko"
repository = "https://github.com/niko-rs/niko"
documentation = "https://docs.rs/niko"
keywords = ["game", "engine", "framework", "gamedev"]
categories = ["game-engines"]
readme = "readme.md"

[build]
target = "wasm32-unknown-unknown"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
js-sys = "0.3"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "EventTarget",
  "KeyboardEvent",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlUniformLocation",
  "WebGlShader",
  "WebGlTexture",
  "Window",
  "HtmlImageElement",
]
